# big-julius-data-ingestion

./: .env.example  .gitignore  Dockerfile  README.md  bulk_update_rules.py  category_subcategory_combinations.txt  check_hdi.py  debug_subcats.py  docker-compose.yml  fix_others_to_outros.py  fix_others_to_outros_v2.py  list_unique_combos.py  pyproject.toml
app/: main.py
app/core/: config.py  logging.py
app/models/: transaction.py
app/routers/: classification_rules.py  ingestion.py
app/services/: firestore_service.py  ingestion_service.py  s3_service.py
app/utils/: csv_parser.py
scripts/: init_firestore.py
scripts/gsheet/: Código.gs  appsscript.json
tests/integration/: test_process_files.py
tests/unit/: test_csv_parser.py  test_firestore_service.py  test_ingestion_service.py  test_reclassification.py
